Доделал первую верстку под названием *С чистого листа*

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </p>
                 <ul class="cards-list">
                     <li>
-                        <article class="class class_tehme_dark">
+                        <article class="card card_theme_dark">
                             <div class="card__author">
                                 <img 
                                     class="card__author-photo"
@@ -181,11 +181,69 @@
                             </div>
                         </article>
                     </li>
+                    <li>
+                        <article class="card card_theme_bright">
+                            <div class="card__content card_text-only">
+                                <h4 class="card__title">Поставить перед собой рамку для фотографии</h4>
+                                <div class="card__text">
+                                    <p>
+                                        Самую обычную: 10 на 15 сантиметров. Уже от одного ощущения, 
+                                        что предстоит работа над большой и сложной задачей, может 
+                                        пропасть всякое желание за неё браться. В такие моменты хорошо 
+                                        помогает загнать задачу в рамки — в прямом смысле. Сосредоточьтесь 
+                                        на том, чтобы заполнить только пространство 10х15 сантиметров. 
+                                        Что дальше — пока неважно.
+                                    </p>
+                                </div>
+                            </div>
+                        </article>
+                    </li>
+                    <li>
+                        <article class="card card_theme_dark">
+                            <div class="card__author">
+                                <img
+                                    class="card__author-photo"
+                                    src="./images/bunin.png"
+                                    alt="Иван Бунин">
+                                <p class="card__author-name">Иван Бунин</p>
+                            </div>
+                            <div class="card__content">
+                                <h4 class="card__title">Сделать из задачи рутину</h4>
+                                <div class="card__text">
+                                    <p>
+                                        «Писать стихи нужно каждый день, подобно тому как скрипач или 
+                                        пианист непременно должен каждый день без пропусков по нескольку 
+                                        часов играть на своём инструменте. В противном случае ваш талант
+                                        неизбежно оскудеет, высохнет, подобно колодцу, откуда долгое 
+                                        время не берут воду. А о чём писать? О чём угодно. Если у вас в 
+                                        данное время нет никакой темы, идеи, то пишите просто обо всём, 
+                                        что увидите», — такой совет своему приятелю дал Иван Бунин. Нет 
+                                        повода ему не следовать.
+                                    </p>
+                                </div>
+                            </div>
+                        </article>
+                    </li>
                 </ul>
             </section>
         </main>
         <footer class="footer content-section content-section_theme_dark">
+            <p class="footer__copy">© VЁRSTKA</p>
+            <nav class="footer__links">
+                <ui class="footer__links">
+                    <li>
+                        <a href='#0'>
+                            ВК
+                         </a>
+                    </li>
 
+                    <li>
+                        <a href="#0">
+                        YouTube
+                    </a>
+                    </li>
+                </ui>
+            </nav>
         </footer>
     </body>
 </html>
